# sqlalchemy-hero

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build.yaml
sqlalchemy_hero/: hero_database.py  hero_generator.py  hero_type_mapper.py
sqlalchemy_hero/types/: column.py  file.py  index.py  metadata.py  mysql_schema.py  postgres_schema.py  spec.py  table.py
tests/: test_hero_generator.py
tests/assets/: child.yaml  parent.yaml
tests/models/: __init__.py  base.py  child.py  parent.py
