[tool.poetry]
name = "sqlalchemy-hero"
version = "0.1.1"
description = "SchemaHero table generator from SQLAlchemy models."
authors = ["Matthias Osswald <info@busykoala.io>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/busykoala/sqlalchemy-hero"
keywords = ["SQLAlchemy", "SchemaHero", "GitOps", "database", "k8s"]

[tool.poetry.dependencies]
python = ">= 3.8, < 4.0"
SQLAlchemy = "^1.4"
SQLAlchemy-Utils = "^0.38"
arrow = "^1.2"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "*"
black = "*"
pylint = "*"
bandit = "*"
typing-extensions = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true
force_single_line = true

[tool.pylint.messages_control]
# https://pylint.pycqa.org/en/latest/search.html?q=C0114
disable = "C0114,C0115,C0116,C0103,R0903,W0719"
